# CLAiM

./: .gitignore  CLAiM_backend_isiklik_kava.md  demo.py  index.html  pyproject.toml
assets/: index-BvGvxcNN.css  index-CkuHRR0H.js  index-ClYWY0Uq.css  index-DAmTtekd.js
back-end/: api.py  demo.py  pyproject.toml
back-end/claim/parsers/: arve_haigla_pdf.py  arve_pdf.py  lisa_json.py  lisa_pdf.py  tk_json.py
back-end/tests/: test_matching.py
back-end/tests/synthetic/scenario_1_taielik_vaste/: arve.json
back-end/tests/synthetic/scenario_2_arves_rohkem/: arve.json  lisa.json
back-end/tests/tervisekassa_invoices/: tervisekassa_invoices.json
claim/: matching.py  models.py  report.py
claim/parsers/: arve_json.py  arve_pdf.py  lisa_json.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: LanguageSwitcher.tsx  Wordmark.tsx
frontend/src/data/: invoices.ts  report.ts
frontend/src/i18n/: en.ts  et.ts  index.ts
frontend/src/lib/: format.ts
frontend/src/pages/: Dashboard.tsx  ReconciliationReport.tsx  Reconciling.tsx  Upload.tsx
tests/: test_matching.py
tests/real_test/: lisa.json
tests/synthetic/scenario_1_taielik_vaste/: arve.json  lisa.json  tk.json
tests/synthetic/scenario_2_arves_rohkem/: arve.json  lisa.json  tk.json
tests/synthetic/scenario_3_lisas_rohkem/: arve.json  lisa.json  tk.json
tests/tervisekassa_invoices/: README_tervisekassa.md  matching_groundtruth.json
(+1 files in other folders)
